syntax = "proto3";

package com.example.invoice;

option java_multiple_files = true;
option java_package = "com.example.invoice.grpc";

service InvoiceGeneratorService {
  rpc InvoiceGeneratorService(InvoiceGeneratorServiceRequest) returns (InvoiceGeneratorServiceResponse);
}

message InvoiceGeneratorServiceRequest {

  enum Type {
    UNKNOWN = 0;
    PURCHASE = 1;
    SUBSCRIPTION = 2;
  }

  string firstName = 1;
  string lastName = 2;
  string email = 3;
  sint64 amount = 4;

  Type purchaseType = 5;
}

message InvoiceGeneratorServiceResponse {
  string responseMessage = 1;
  sint64 responseCode = 2;
}